# openclaw-helper

./: .gitignore  LICENSE  Makefile  README.md  go.mod
.github/workflows/: ci.yml  issue-analysis.yml  release.yml
cmd/helper/: main.go
docs/: index.html
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/nsis/: installer.nsh
frontend/src-tauri/src/: commands.rs  helper_ipc.rs  main.rs  tray.rs
frontend/src/api/: helper.ts  mock.ts
internal/chat/: chat_test.go  context.go  faq.go  handler.go  llm_proxy.go
internal/checker/: checker.go  checker_test.go  node.go  openclaw.go  virtualization.go  windows.go  windows_stub.go  wsl.go
internal/diagnosis/: collector.go  engine.go  engine_test.go  playbooks.go  playbooks_stub.go  playbooks_windows.go  rules.go
internal/healing/: events.go  executor.go  executor_test.go
internal/installer/: admin_stub.go  admin_windows.go  node_installer.go  node_installer_stub.go  openclaw_installer.go  openclaw_installer_stub.go  orchestrator.go  orchestrator_test.go  phases.go  phases_test.go  precheck.go  wsl_installer.go  wsl_installer_stub.go
internal/ipc/: dial_other.go  dial_windows.go  ipc_test.go  protocol.go  server.go  server_other.go  server_windows.go
internal/playbook/: store.go  store_test.go  types.go
internal/report/: collector.go  collector_test.go  github.go  github_test.go  telegram.go  telegram_test.go
internal/scriptrun/: cache.go  cache_test.go  embed.go  embed_test.go  executor.go  manifest.go  manifest_test.go  parser.go  parser_test.go  runner.go  runner_stub.go  runner_windows.go
internal/types/: types.go
pkg/wsl/: distro.go  distro_test.go  exec.go  exec_other.go  exec_windows.go
(+41 files in other folders)
